fix vertical overflow in api-doc

--- a/src/app/api-doc/single-service-doc/single-service-doc.component.css
+++ b/src/app/api-doc/single-service-doc/single-service-doc.component.css
@@ -16,3 +16,7 @@
  *
  */
 
+.content {
+    height: calc(100% - 64px);
+    overflow-y: auto;
+}
